将模块导出为CommonJS模块，解决NodeJS运行时环境下无法识别该模块的问题

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "@honmameiko/apf-types",
   "version": "1.0.0",
   "description": "type declarations for both frontend and backend of the apf",
-  "main": "index.ts",
+  "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -rf dist/ && tsc"
   },
   "keywords": [
     "Typescript"
