--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf dist/ && tsc",
-    "publish": "npm run build && npm version patch && npm publish"
+    "pub": "npm run build && npm version patch && npm publish"
   },
   "keywords": [
     "Typescript"
